# platform/server.js
@@ -322,6 +322,7 @@ const v1NameSite = require('../api/v1/names/[id]/site');
 const v1NameSlots = require('../api/v1/names/[id]/slots');
 const v1NameSimilarities = require('../api/v1/names/[id]/similarities');
 const v1NameGraph = require('../api/v1/names/[id]/graph');
+const v1Similarities = require('../api/v1/similarities');
 const v1SimilaritiesRelationships = require('../api/v1/similarities/relationships');
 const v1Pantheons = require('../api/v1/pantheons');
 const v1Pantheon = require('../api/v1/pantheons/[name]');
@@ -351,6 +352,7 @@ app.use('/api/v1/names/:id/slots', v1NameSlots);
 app.use('/api/v1/names/:id/similarities', v1NameSimilarities);
 app.use('/api/v1/names/:id/graph', v1NameGraph);
 app.use('/api/v1/similarities/relationships', v1SimilaritiesRelationships);
+app.use('/api/v1/similarities', v1Similarities);
 app.use('/api/v1/names/:id', v1NameDetail);
 app.use('/api/v1/pantheons/:name', v1Pantheon);
 app.use('/api/v1/pantheons', v1Pantheons);
